gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test21912.d
version https://git-lfs.github.com/spec/v1
oid sha256:e6dd42aa1a6fecf412a5152154ec35760c686c665cd661e76ee7b014444f904e
size 1831
